// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render BlogPage component correctly with isPreview 1`] = `
<DocumentFragment>
  <div
    class="preview-page"
  >
    <div>
      BlogPageItems
    </div>
    <div
      class="preview-page__comments-count"
    >
      2 Comment(s)
    </div>
    <div
      class="preview-page__interactions"
    >
      <div>
        LikeUnlikeBlog
      </div>
      <div>
        SaveUnsaveBlog
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Should render BlogPage component correctly with props 1`] = `
<DocumentFragment>
  <div
    class="blog-page"
  >
    <div
      class="blog-page__interactions"
    >
      <div>
        LikeUnlikeBlog
      </div>
      <a>
        <abbr
          title="Edit Blog"
        >
          <svg
            class="edit-blog-icon"
          >
            edit-regular.svg
          </svg>
        </abbr>
      </a>
      <div
        class="edit-modal__buttons"
      >
        <abbr
          title="Close"
        >
          <button
            class="edit-modal__close-button"
            data-testid="close_button"
          >
            X
          </button>
        </abbr>
      </div>
      <div
        class="edit-modal__form"
      >
        <div>
          NewBlog
        </div>
      </div>
      <div>
        SaveUnsaveBlog
      </div>
    </div>
    <div>
      BlogPageItems
    </div>
    <div>
      SocialShare
    </div>
    <div
      class="comments-section"
    >
      <div>
        CommentsList
      </div>
      <div
        class="comments-section__form"
      >
        <form
          data-testid="new_comment_form"
        >
          <textarea
            data-testid="new_comment_input"
            placeholder="Comment"
          />
          <button
            disabled=""
          >
            Add Comment
          </button>
        </form>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Should render BlogPage component correctly with uname!==blogPage(created_by) 1`] = `
<DocumentFragment>
  <div
    class="blog-page"
  >
    <div
      class="blog-page__interactions"
    >
      <div>
        LikeUnlikeBlog
      </div>
      <div
        class="edit-modal__buttons"
      >
        <abbr
          title="Close"
        >
          <button
            class="edit-modal__close-button"
            data-testid="close_button"
          >
            X
          </button>
        </abbr>
      </div>
      <div
        class="edit-modal__form"
      >
        <div>
          NewBlog
        </div>
      </div>
      <div>
        SaveUnsaveBlog
      </div>
    </div>
    <div>
      BlogPageItems
    </div>
    <div>
      SocialShare
    </div>
    <div
      class="comments-section"
    >
      <div>
        CommentsList
      </div>
      <div
        class="comments-section__form"
      >
        <form
          data-testid="new_comment_form"
        >
          <textarea
            data-testid="new_comment_input"
            placeholder="Comment"
          />
          <button
            disabled=""
          >
            Add Comment
          </button>
        </form>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Should render BlogPage component correctly with undefined uname 1`] = `
<DocumentFragment>
  <div
    class="blog-page"
  >
    <div
      class="blog-page__interactions"
    >
      <div>
        LikeUnlikeBlog
      </div>
      <div
        class="edit-modal__buttons"
      >
        <abbr
          title="Close"
        >
          <button
            class="edit-modal__close-button"
            data-testid="close_button"
          >
            X
          </button>
        </abbr>
      </div>
      <div
        class="edit-modal__form"
      >
        <div>
          NewBlog
        </div>
      </div>
      <div>
        SaveUnsaveBlog
      </div>
    </div>
    <div>
      BlogPageItems
    </div>
    <div>
      SocialShare
    </div>
    <div
      class="comments-section"
    >
      <div>
        CommentsList
      </div>
      <div
        class="comments-section__form"
      >
        <h5
          class="comments-section__login-links"
        >
          <a>
            Login
          </a>
           or 
          <a>
            Sign In
          </a>
           to Add a Comment!
        </h5>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
